gfp
===
Snapshot ????-??-?? ToDo
 * Add MS VC compilation.
 * Add first world.
 * Add scripting for individual testing and comparsion.
 * Add multithread support.

Version 0.0.0.1 2010-08-24
 * Fix bugs in allocation.
 * Fix bugs in reading streams into objects.
 * Fix memory leak.
 * Add object's generation and mutation support.
 * Add inital generation.
 * Add crossover.
 * Add mutation.
 * Grow some program.

Snapshot 2010-08-12
 * Make own binary for test interpreter.
 * Prepare for inital generation.
 * Add config singleton.

Snapshot 2010-03-27
 * Add Ruby support.
 * Finish functions.

Snapshot 2010-03-26
 * Add support for execution of program.

Snapshot 2010-02-21
 * Add all needed files for GNU GPL.
 * Start adding of calculation.
 * Add LaTeX documentation.

Snapshot 2010-02-20
 * Add support for function names and loading functions from shared library.

Snapshot 2010-01-05
 * Inital snapshot of new branch and closing dead branch
 * Some copying and refactoring old code.
